anv: Regression causing issues for radv when there are no Intel devices
Guessing anv fails initialization with 0 Intel devices in a way that the loader aborts and does not try other drivers.
User report on IRC:
[11:31:18 am] <turol_> jekstrand: your anv multiple physical devices patch broke radv
[11:31:32 am] <turol_> it now fails to enumerate my gpu (pitcairn)
[11:31:42 am] <turol_> but probably also ALL radv devices...
[11:34:45 am] <bnieuwenhuizen> turol_: what patch?
[11:35:05 am] <turol_> bnieuwenhuizen "anv: Allow enumerating multiple physical devices"
[11:35:14 am] <turol_> 34c8621c3
[11:37:12 am] <bnieuwenhuizen> turol_: can you try removing (temporarily) the anv json file?
[11:37:38 am] <turol_> as soon as i figure where install puts it...
[11:37:38 am] <bnieuwenhuizen> since it does not change radv I suspect anv just blows up with 0 intel devices
[11:38:00 am] <bnieuwenhuizen> /usr/share/vulkan/icd.d/ ?
[11:38:44 am] <bnieuwenhuizen> alternatively ~/.local/share/vulkan IIRC if installed for an user
[11:39:24 am] <turol_> only had intel_icd.i686.json in there
[11:39:27 am] <turol_> moving it did not help
[11:39:34 am] <turol_> probably not the right file
[11:39:46 am] <turol_> what is the correct command to configure mesa to not build anv?
[11:40:22 am] <bnieuwenhuizen> meson configure -Dvulkan-drivers=amd IIRC
[11:40:46 am] <turol_> ok, found .x86_64.json in /usr/local/share/vulkan/icd.d
[11:40:49 am] <turol_> moving that fixed it